Add some styling

--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,10 @@
 <head>
     <meta title="Calculator">
     <link rel="stylesheet" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Calculateur d'investissement</h1>
+    <h1>Calculateur d'investissements</h1>
     <main>
         <div>
             <label for="#montant">Montant Investi</label>
@@ -27,7 +28,10 @@
             <label for="retirer">Retraits Mensuels</label>
             <input type="checkbox" id="retirer" checked>
         </div>
+        <div>
+            
         <button id="valider">Calculer</button>
+        </div>
         <section>
             <h1>Resultats</h1>
         <label id="solde_compte">Resultat:</label>
